Remove soft fail and exit code options from checkov

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -25,10 +25,8 @@ jobs:
           -d . \
           --external-checks-dir ./checkov \
           --output json \
-          --quiet \
-          --soft-fail-on VERSION \
-          --exit-code 1
-          
+          --quiet
+
       - name: Upload Report
         uses: actions/upload-artifact@v4
         with:
