--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -1,9 +1,9 @@
-name: Checkov Policy Scan
-
+name: Agentic IaC Autofix
 
 permissions:
-  contents: read
+  contents: write
   actions: read
+  pull-requests: write
 
 on:
   push:
@@ -14,27 +14,50 @@ on:
       - "**/*.tf"
 
 jobs:
-  scan:
+  scan-and-fix:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Checkov
-        run: pip install checkov
+      - name: Install Python Dependencies
+        run: |
+          pip install checkov openai
 
-      - name: Run Checkov with custom policies
+      # ------------------------------
+      # STEP 1 — Checkov Scan (baseline)
+      # ------------------------------
+      - name: Step 1: Run Checkov Scan
         run: |
           checkov \
-          -d . \
-          --external-checks-dir ./checkov \
-          --output json \
-          --output-file-path results.json \
-          --quiet
+            -d ./azure-hub-spoke \
+            --external-checks-dir ./azure-hub-spoke/checkov \
+            --output json \
+            --output-file-path checkov-results.json \
+            --quiet
 
-      - name: Upload Report
+      - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
         with:
           name: checkov-report
-          path: results.json
+          path: checkov-results.json
+
+      # ------------------------------
+      # STEP 2 — Agentic Orchestrator (Analyzer -> Rewriter -> Validator -> Explainer)
+      # ------------------------------
+      - name: Run Agentic Orchestrator
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          python agentic-iac/orchestrator/main.py \
+            --tf_dir azure-hub-spoke
+
+      # ------------------------------
+      # STEP 3 — Upload Agentic Summary Output
+      # ------------------------------
+      - name: Upload Agentic Pipeline Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: agentic-pipeline-report
+          path: agentic-iac/pipeline-result.json
