integrate agents in the current workflow

--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -2,8 +2,8 @@ name: Agentic IaC Autofix
 
 permissions:
   contents: write
-  pull-requests: write
   actions: read
+  pull-requests: write
 
 on:
   push:
@@ -25,17 +25,19 @@ jobs:
         run: |
           pip install checkov openai
 
+      - name: Add repo root to PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+
       # ------------------------------
-      # STEP 1 — Run Checkov Scan
+      # STEP 1 — Checkov Scan
       # ------------------------------
-      - name: Run Checkov Scan
+      - name: Step 1: Run Checkov Scan
         run: |
-          checkov \
-            -d ./azure-hub-spoke \
-            --external-checks-dir ./azure-hub-spoke/checkov \
-            --output json \
-            --output-file-path checkov-results.json \
-            --quiet
+          checkov -d ./azure-hub-spoke \
+                  --external-checks-dir ./azure-hub-spoke/checkov \
+                  --output json \
+                  --output-file-path checkov-results.json \
+                  --quiet
 
       - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
