--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -25,19 +25,17 @@ jobs:
         run: |
           pip install checkov openai
 
-      - name: Add repo root to PYTHONPATH
-        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
-
       # ------------------------------
-      # STEP 1 — Checkov Scan
+      # STEP 1 — Checkov Scan (baseline)
       # ------------------------------
       - name: Step 1: Run Checkov Scan
         run: |
-          checkov -d ./azure-hub-spoke \
-                  --external-checks-dir ./azure-hub-spoke/checkov \
-                  --output json \
-                  --output-file-path checkov-results.json \
-                  --quiet
+          checkov \
+            -d ./azure-hub-spoke \
+            --external-checks-dir ./azure-hub-spoke/checkov \
+            --output json \
+            --output-file-path checkov-results.json \
+            --quiet
 
       - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
@@ -46,13 +44,15 @@ jobs:
           path: checkov-results.json
 
       # ------------------------------
-      # STEP 2 — Agentic Orchestrator
+      # STEP 2 — Run Agentic Orchestrator
       # ------------------------------
       - name: Run Agentic Orchestrator
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          PYTHONPATH: ${{ github.workspace }}/agentic-iac
         run: |
-          python agentic-iac/orchestrator/main.py --tf_dir azure-hub-spoke
+          python agentic-iac/orchestrator/main.py \
+            --tf_dir azure-hub-spoke
 
       # ------------------------------
       # STEP 3 — Upload Agent Output
