--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -25,13 +25,21 @@ jobs:
         run: |
           pip install checkov openai
 
+      # 🔥 FIX: Remove folder mistakenly created earlier
+      - name: Cleanup previous Checkov file
+        run: |
+          rm -rf checkov-results.json
+
+      # ------------------------------
+      # STEP 1 — Checkov Scan
+      # ------------------------------
       - name: Step 1 - Run Checkov Scan
         run: |
           checkov \
             -d ./azure-hub-spoke \
             --external-checks-dir ./azure-hub-spoke/checkov \
             --output json \
-            --output-file-path ./checkov-results.json \
+            --output-file-path checkov-results.json \
             --quiet
 
       - name: Upload Checkov Report
@@ -40,6 +48,9 @@ jobs:
           name: checkov-report
           path: checkov-results.json
 
+      # ------------------------------
+      # STEP 2 — Run Agentic Orchestrator
+      # ------------------------------
       - name: Step 2 - Run Agentic Orchestrator
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -47,6 +58,9 @@ jobs:
         run: |
           python agentic-iac/orchestrator/main.py --tf_dir azure-hub-spoke
 
+      # ------------------------------
+      # STEP 3 — Upload Agent Output
+      # ------------------------------
       - name: Upload Agentic Pipeline Report
         uses: actions/upload-artifact@v4
         with:
