--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -25,14 +25,17 @@ jobs:
         run: |
           pip install checkov openai
 
-      # 🔥 FIX: Remove folder mistakenly created earlier
-      - name: Cleanup previous Checkov file
+      - name: Cleanup previous checkov file or dir
         run: |
-          rm -rf checkov-results.json
+          if [ -d "checkov-results.json" ]; then
+            echo "⚠️ Found directory named checkov-results.json — removing..."
+            rm -rf checkov-results.json
+          fi
+          if [ -f "checkov-results.json" ]; then
+            echo "⚠️ Found file checkov-results.json — removing..."
+            rm -f checkov-results.json
+          fi
 
-      # ------------------------------
-      # STEP 1 — Checkov Scan
-      # ------------------------------
       - name: Step 1 - Run Checkov Scan
         run: |
           checkov \
@@ -48,9 +51,6 @@ jobs:
           name: checkov-report
           path: checkov-results.json
 
-      # ------------------------------
-      # STEP 2 — Run Agentic Orchestrator
-      # ------------------------------
       - name: Step 2 - Run Agentic Orchestrator
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -58,9 +58,6 @@ jobs:
         run: |
           python agentic-iac/orchestrator/main.py --tf_dir azure-hub-spoke
 
-      # ------------------------------
-      # STEP 3 — Upload Agent Output
-      # ------------------------------
       - name: Upload Agentic Pipeline Report
         uses: actions/upload-artifact@v4
         with:
