--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -25,19 +25,23 @@ jobs:
         run: |
           pip install checkov openai
 
+      # ----------------------------------------------------
       # CLEANUP corrupted cases
+      # ----------------------------------------------------
       - name: Cleanup stale Checkov directory/file
         run: |
-          if [ -d "./checkov-results.json" ]; then
-            echo "⚠️ Found corrupted directory checkov-results.json — removing..."
-            rm -rf ./checkov-results.json
+          if [ -d "./reports/checkov-results.json" ]; then
+            echo "⚠️ Removing corrupted reports/checkov-results.json directory..."
+            rm -rf ./reports/checkov-results.json
           fi
-          if [ -f "./checkov-results.json" ]; then
-            echo "⚠️ Found stale checkov-results.json file — removing..."
-            rm -f ./checkov-results.json
+          if [ -f "./reports/checkov-results.json" ]; then
+            echo "⚠️ Removing stale file reports/checkov-results.json..."
+            rm -f ./reports/checkov-results.json
           fi
 
-      # STEP 1 — Checkov Scan
+      # ----------------------------------------------------
+      # STEP 1 — Checkov Scan (Write to reports/)
+      # ----------------------------------------------------
       - name: Step 1 - Run Checkov Scan
         run: |
           mkdir -p reports
@@ -48,14 +52,16 @@ jobs:
             --output-file-path ./reports/checkov-results.json \
             --quiet
 
-      # 🔥 Correct path here
+      # Upload correct file
       - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
         with:
           name: checkov-report
           path: reports/checkov-results.json
 
+      # ----------------------------------------------------
       # STEP 2 — Orchestrator
+      # ----------------------------------------------------
       - name: Step 2 - Run Agentic Orchestrator
         working-directory: ${{ github.workspace }}
         env:
@@ -64,7 +70,9 @@ jobs:
         run: |
           python agentic-iac/orchestrator/main.py --tf_dir azure-hub-spoke
 
-      # STEP 3 — Upload Agent Output
+      # ----------------------------------------------------
+      # STEP 3 — Upload Final Pipeline Report
+      # ----------------------------------------------------
       - name: Upload Agentic Pipeline Report
         uses: actions/upload-artifact@v4
         with:
