--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -23,15 +23,15 @@ jobs:
         run: |
           pip install checkov openai
 
-      # CLEANUP corrupted cases
-      - name: Cleanup stale Checkov directory/file
+      # Cleanup any old/corrupted files
+      - name: Cleanup stale Checkov outputs
         run: |
           rm -rf ./reports
           rm -rf ./checkov-results.json
 
-      # -----------------------------------------
-      # STEP 1 — Correct Checkov Scan (single file)
-      # -----------------------------------------
+      # --------------------------------------------------
+      # STEP 1 — Run Checkov (correct v3.x syntax)
+      # --------------------------------------------------
       - name: Step 1 - Run Checkov Scan
         run: |
           mkdir -p reports
@@ -43,15 +43,16 @@ jobs:
             --output-file-name checkov-results.json \
             --quiet
 
+      # Upload Checkov JSON correctly (hyphen NOT underscore)
       - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
         with:
           name: checkov-report
           path: reports/checkov-results.json
 
-      # -----------------------------------------
-      # STEP 2 — Orchestrator
-      # -----------------------------------------
+      # --------------------------------------------------
+      # STEP 2 — Run Agentic Orchestrator
+      # --------------------------------------------------
       - name: Step 2 - Run Agentic Orchestrator
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
